--- a/navigation.html
+++ b/navigation.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XLog</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1><a href="/navigation.html">导航</a></h1>
+    <h1><a href="">导航</a></h1>
 </body>
 </html>
