--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>XLog</title>
 </head>
 <body>
-    <h1><a href="/navigation.html">导航</a></h1>
+    <h1><a href="">Web导航</a></h1>
+    <h1><a href="english">单词</a></h1>
 </body>
 </html>
